Add html syntaxt to index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Like I DID!</title>
+	</head>
+	<body>
+		<main class="container">
+    	<h1>Hi there, I'm Hank Quinlan!</h1>
+		</main>
+	</body>
+</html>
