--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Like I DID!</title>
-	</head>
-	<body>
-		<main class="container">
-    	<h1>Hi there, I'm Hank Quinlan!</h1>
-		</main>
-	</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="LikeiDid - Save money for what matters">
+    <meta name="author" content="http://likeidid.com">
+    <link rel="shortcut icon" href="assets/img/favicon.png">
+
+    <title>LikeiDid - Save money for what matters</title>
+
+    <!-- Bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <!-- siimple style -->
+    <link href="css/main.css" rel="stylesheet">
+    
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+	<div id="wrapper">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-12 col-lg-12">
+					<h1>LikeiDid</h1>
+					<h2 class="slogan">Save money for what matters</h2>
+          <h3 class="subtitle">LikeiDid let you set your objective and help you save money to buy it</h3>
+          <form action="//likeidid.us11.list-manage.com/subscribe/post?u=7da8ec24160c7fa1b5efe7f5f&amp;id=2eb17435d8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-inline signup validate" target="_blank" novalidate>
+            <div class="mc-field-group form-group">
+              <input type="email" value="" name="EMAIL" class="form-control required email" placeholder="Enter your email address" id="mce-EMAIL">
+              <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-theme">Get notified!</button>
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;">
+              <input type="text" name="b_7da8ec24160c7fa1b5efe7f5f_2eb17435d8" tabindex="-1" value="">
+            </div>
+          </div>
+        </form>
+	    </div>
+    </div>
+  </div>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </body>
 </html>
