--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="http://likeidid.com">
     <link rel="shortcut icon" href="assets/img/favicon.png">
 
-    <title>LikeiDid - Save money for what matters</title>
+    <title>LikeiDid - Spend money on what matters</title>
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
