--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="http://likeidid.com">
     <link rel="shortcut icon" href="assets/img/favicon.png">
 
-    <title>LikeiDid - Spend money on what matters</title>
+    <title>Spend money on what matters - LikeiDid</title>
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12 col-lg-12">
 					<h1>LikeiDid</h1>
-					<h2 class="slogan">Save money for what matters</h2>
+					<h2 class="slogan">Spend money on what matters</h2>
           <h3 class="subtitle">LikeiDid let you set your objective and help you save money to buy it</h3>
           <form action="//likeidid.us11.list-manage.com/subscribe/post?u=7da8ec24160c7fa1b5efe7f5f&amp;id=2eb17435d8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-inline signup validate" target="_blank" novalidate>
             <div class="mc-field-group form-group">
